# OpenCV-detection

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  DetectColor.cpp  DetectShapes.cpp  README.md  Shapedetector.cpp  Shapedetector.h  example_batch.txt  main.cpp  shapedetector.cpp  shapedetector.h
